--- a/css/colorful-text-widget-style.css
+++ b/css/colorful-text-widget-style.css
@@ -7,47 +7,12 @@
 	color: black;
 }
 
-.ctw-blue {
-    background-color: #d8ecf7;
-    border: 1px solid #afcde3;}
-
-.ctw-gray {
-    background-color: #e2e2e2;
-    border: 1px solid #bdbdbd;
-}
-
-.ctw-green {
-    background-color: #d9edc2;
-    border: 1px solid #b2ce96;
-}
-
-.ctw-purple {
-    background-color: #e2e2f9;
-    border: 1px solid #bebde9;
-}
-
-.ctw-red {
-    background-color: #EF6151;
-    border: 1px solid #e9b3b3;
-}
-
-.ctw-yellow {
-    background-color: #fef5c4;
-    border: 1px solid #fadf98;
-}
-
-.ctw-blue, 
-.ctw-gray, 
-.ctw-green, 
-.ctw-purple, 
-.ctw-red, 
-.ctw-yellow{
-	border-radius:10px;
+.ctw{
+	/*border-radius:10px;
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
-	-o-border-radius:10px;
-	margin: 0 0 25px;
-    overflow: hidden;
-    padding: 20px;
-    color: #000;	
-	}
+	-o-border-radius:10px;*/
+	padding: 15px;
+	color: #000;	
+	text-align:justify;
+}
